; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_mad.c_mlx4_ib_free_sqp_ctx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/mlx4/extr_mad.c_mlx4_ib_free_sqp_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_ib_demux_pv_ctx = type { i64, i32*, i32*, i32*, %struct.TYPE_2__*, i64, i32 }
%struct.TYPE_2__ = type { i32* }

@DEMUX_PV_STATE_DOWN = common dso_local global i64 0, align 8
@DEMUX_PV_STATE_DOWNING = common dso_local global i64 0, align 8
@IB_QPT_SMI = common dso_local global i32 0, align 4
@IB_QPT_GSI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx4_ib_demux_pv_ctx*)* @mlx4_ib_free_sqp_ctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mlx4_ib_free_sqp_ctx(%struct.mlx4_ib_demux_pv_ctx* %0) #0 {
  %2 = alloca %struct.mlx4_ib_demux_pv_ctx*, align 8
  store %struct.mlx4_ib_demux_pv_ctx* %0, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %3 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %4 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @DEMUX_PV_STATE_DOWN, align 8
  %7 = icmp sgt i64 %5, %6
  br i1 %7, label %8, label %73

8:                                                ; preds = %1
  %9 = load i64, i64* @DEMUX_PV_STATE_DOWNING, align 8
  %10 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %11 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %10, i32 0, i32 0
  store i64 %9, i64* %11, align 8
  %12 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %13 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %12, i32 0, i32 6
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @flush_workqueue(i32 %14)
  %16 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %17 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %16, i32 0, i32 5
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %36

20:                                               ; preds = %8
  %21 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %22 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %21, i32 0, i32 4
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @ib_destroy_qp(i32* %26)
  %28 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %29 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %28, i32 0, i32 4
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  store i32* null, i32** %32, align 8
  %33 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %34 = load i32, i32* @IB_QPT_SMI, align 4
  %35 = call i32 @mlx4_ib_free_pv_qp_bufs(%struct.mlx4_ib_demux_pv_ctx* %33, i32 %34, i32 0)
  br label %36

36:                                               ; preds = %20, %8
  %37 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %38 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %37, i32 0, i32 4
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i64 1
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i32*, i32** %41, align 8
  %43 = call i32 @ib_destroy_qp(i32* %42)
  %44 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %45 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %44, i32 0, i32 4
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i64 1
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 0
  store i32* null, i32** %48, align 8
  %49 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %50 = load i32, i32* @IB_QPT_GSI, align 4
  %51 = call i32 @mlx4_ib_free_pv_qp_bufs(%struct.mlx4_ib_demux_pv_ctx* %49, i32 %50, i32 0)
  %52 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %53 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %52, i32 0, i32 3
  %54 = load i32*, i32** %53, align 8
  %55 = call i32 @ib_dereg_mr(i32* %54)
  %56 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %57 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %56, i32 0, i32 3
  store i32* null, i32** %57, align 8
  %58 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %59 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %58, i32 0, i32 2
  %60 = load i32*, i32** %59, align 8
  %61 = call i32 @ib_dealloc_pd(i32* %60)
  %62 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %63 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %62, i32 0, i32 2
  store i32* null, i32** %63, align 8
  %64 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %65 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %64, i32 0, i32 1
  %66 = load i32*, i32** %65, align 8
  %67 = call i32 @ib_destroy_cq(i32* %66)
  %68 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %69 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %68, i32 0, i32 1
  store i32* null, i32** %69, align 8
  %70 = load i64, i64* @DEMUX_PV_STATE_DOWN, align 8
  %71 = load %struct.mlx4_ib_demux_pv_ctx*, %struct.mlx4_ib_demux_pv_ctx** %2, align 8
  %72 = getelementptr inbounds %struct.mlx4_ib_demux_pv_ctx, %struct.mlx4_ib_demux_pv_ctx* %71, i32 0, i32 0
  store i64 %70, i64* %72, align 8
  br label %73

73:                                               ; preds = %36, %1
  ret void
}

declare dso_local i32 @flush_workqueue(i32) #1

declare dso_local i32 @ib_destroy_qp(i32*) #1

declare dso_local i32 @mlx4_ib_free_pv_qp_bufs(%struct.mlx4_ib_demux_pv_ctx*, i32, i32) #1

declare dso_local i32 @ib_dereg_mr(i32*) #1

declare dso_local i32 @ib_dealloc_pd(i32*) #1

declare dso_local i32 @ib_destroy_cq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
